--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "scripts": {
     "start": "node build/index.js",
     "dev": "npx nodemon",
