--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "dist"
   },
   "include": ["src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }],
